<resources>
    <string name="app_name">MingleApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_here">Sign Up Here!</string>
    <string name="forgot_password_dialog">Forgot Password</string>
    <string name="enter_your_email_adress">Enter your email adress</string>
    <string name="cancel">CANCEL</string>
    <string name="reset">RESET</string>
    <string name="type_message">Type Message</string>
    <string name="sign_out">Sign out</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="favorites">Favorites</string>
    <string name="chat">Chat</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="change_username">Change username</string>
    <string name="delete_account">Delete account</string>
    <string name="FAVORITES">FAVORITES</string>
    <string name="chat_name">Robin Jakobsson</string>
    <string name="hello">Hello</string>
    <string name="date_time_text">12:34</string>
    <string name="chat_name_2">Nicholas</string>
</resources>