<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".View.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="359dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/border"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/acme"
                android:textSize="24sp"
                android:hint="@string/email"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/login_pw"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/border"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="20dp"
               android:layout_marginTop="20dp"
                android:fontFamily="@font/acme"
                android:textSize="24sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:drawableEnd="@drawable/baseline_login_24"
                android:fontFamily="@font/acme"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingHorizontal="40dp"/>

            <TextView
                android:id="@+id/forgot_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forgot_password"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/acme"/>

            <TextView
                android:id="@+id/signup_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up_here"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/acme"
                android:textColor="@color/green"/>


        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>